--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
+    "nanoid": "^4.0.0",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20"
   }
 }
