--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase-admin": "^11.5.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mongoose": "^6.8.2",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.0",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20"
